# wit

./: .env.example  .gitignore  AGENTS.md  BUILD_TICKETS.md  CONTRIBUTING.md  Justfile  LICENSE.md  PROJECT_BRIEF.md  README.md  SECURITY.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CUSTOMISING.md  SAFETY.md  TICKET_WRITING.md  USAGE.md  architecture.md  configuration.md  operations.md  security.md  troubleshooting.md
scripts/: bootstrap-host.sh  build-loop-follow.sh  build-loop-monitor.sh  build-loop-stop.sh  build-loop.sh  check-compose-config.sh  check-no-generated-private-files.sh  check-no-secrets.sh  codex-usage.sh  create-remote-repo.sh  mock-output.sh  prepare-pi-event-range.mjs  quality-gate.sh  refresh_build_queue.py  render-agent-events.mjs  run-agent.sh  test-build-loop-agent-output.sh  test-build-loop-codex-usage.sh  test-build-loop-controls.sh  test-build-loop-monitor.sh  test-build-loop-pr.sh  test-build-loop-recovery.sh  test-build-loop-state.sh  test-build-loop-ticket-summary.sh  test-host-bootstrap.sh
scripts/lib/: build-loop-state.sh  (+3 more)
tests/: test_apply.py  test_apply_command.py  test_apply_status_contract.py  test_cli.py  test_config.py  test_doctor.py  test_health_clients.py  test_jellyfin_library.py  test_matching.py  test_plan_command.py  test_plan_store.py  test_planning_contract.py  test_plans.py  test_selection.py  test_sonarr_client.py  test_sonarr_commands.py  test_sonarr_episodes.py  test_sonarr_monitoring.py  test_sonarr_queue.py  test_status.py  test_status_command.py  test_transport.py  test_tvmaze_client.py
(+21 files in other folders)
