[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "wit"
version = "0.1.0"
description = "A safe, local-first television library operations CLI"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
dependencies = [
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.10.6,<3.0.0",
    "typer>=0.15.1,<1.0.0",
]

[project.scripts]
wit = "wit.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.14.1,<2.0.0",
    "pytest>=8.3.4,<10.0.0",
    "ruff>=0.9.3,<1.0.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["^scripts/"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "RUF"]
